# primeclue

./: .gitignore  CONTRIBUTING.md  NEXT_FEATURES.md  README.md  VIDEOS.md  build.sh  dev_to_beta.sh  license_header.txt  post.txt  start_primeclue_docker.sh
backend/: Cargo.toml  build.sh  rustfmt.toml
backend/primeclue/: Cargo.toml
backend/primeclue-api/: Cargo.toml
backend/primeclue-api/examples/: check_gpw.sh  check_wse.sh  execute_for_best.rs  gpw_median_check.rs  import_big.rs  median_check.rs  mnist_fashion_median_check.rs  run_16_execute_for_best.sh  run_median_check.sh  run_time_limit.sh  test_training.rs  time_limit.rs  wse_median_check.rs
backend/primeclue-api/src/: classifier.rs  data.rs  executor.rs  main.rs  rest.rs  user.rs
backend/primeclue/benches/: bench.rs
backend/primeclue/src/: error.rs  lib.rs  math.rs  rand.rs  user.rs
backend/primeclue/src/data/: common.rs  data_set.rs  expression.rs  importer.rs  input.rs  mod.rs  outcome.rs
backend/primeclue/src/exec/: class_training.rs  classifier.rs  functions.rs  mod.rs  node.rs  score.rs  scored_tree.rs  training_group.rs  tree.rs
backend/primeclue/src/serialization/: deserializable.rs  mod.rs  serializable.rs  serializator.rs
backend/scripts/: dev_to_beta.sh  docker_build.sh  format.sh  show_test_coverage.sh
docker/: Dockerfile  run.sh
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  http.js  main.js
test_data/: README.md
test_data/processed/: adult.csv  companies_1_year.csv  crime.csv  fizz_buzz.csv  hepatitis.csv  (+2 more)
(+46 files in other folders)
