[package]
name = "primeclue"
version = "0.1.0"
authors = ["Łukasz Wojtów <lukasz.wojtow@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
lazy_static = "1.4.0"
rand = "0.7"
rand_xorshift = "0.2.0"
serde = { version = "1.0.91", features = ["derive"] }
rayon = "1.2.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
